@startuml
abstract class Command {
    +execute(...)
}

class XYZCommand
note bottom of XYZCommand
  AddCommand, DeleteCommand,
  ArchiveCommand, UnarchiveCommand,
  ListArchiveCommand
end note

class Parser {
    +{static} parse(fullCommand): Command
}

class XYZCommandParser
note bottom of XYZCommandParser
  AddCommandParser, DeleteCommandParser,
  ArchiveCommandParser, UnarchiveCommandParser
end note

class ApplicationList {
    +getActiveApplication(index)
    +getArchivedApplication(index)
    +hasApplication(app)
    +countActive()
    +countArchived()
}

class Application {
    -isArchived: boolean
    +isArchived(): boolean
    +setArchived(boolean)
}

Command <|-- XYZCommand
Parser ..> XYZCommandParser : delegates to
XYZCommand ..> ApplicationList : uses
ApplicationList "1" o-- "0..*" Application
@enduml
